--- a/sass/_pedals.scss
+++ b/sass/_pedals.scss
@@ -29,3 +29,49 @@
     border: none;
     text-align: center;
   }
+
+  #slot1{
+    position: absolute;
+    border-style: dotted;
+    border-color: yellow;
+    height: 100px;
+    width: 100px;
+    top: 400px;
+    left: 400px
+  }
+  #slot2{
+    position: absolute;
+    border-style: dotted;
+    border-color: yellow;
+    height: 100px;
+    width: 100px;
+    top: 400px;
+    left: 600px
+  }
+  #slot3{
+    position: absolute;
+    border-style: dotted;
+    border-color: yellow;
+    height: 100px;
+    width: 100px;
+    top: 400px;
+    left: 800px
+  }
+  #slot4{
+    position: absolute;
+    border-style: dotted;
+    border-color: yellow;
+    height: 100px;
+    width: 100px;
+    top: 400px;
+    left: 1000px
+  }
+  #slot5{
+    position: absolute;
+    border-style: dotted;
+    border-color: yellow;
+    height: 100px;
+    width: 100px;
+    top: 400px;
+    left: 1200px
+  }
