--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,8 @@ body{
         font-size: 5rem;
         color: yellow;
     }
-
 }
+
 .musiclinks{
     p{
         color:yellow
@@ -23,6 +23,15 @@ body{
     margin: auto;
     a{
         color:yellow
+    }
+}
+
+.sidetext {
+    p {
+        font-size: 5rem;
+        color: yellow;
+        writing-mode: vertical-rl;
+       
     }
 }
 
