--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../img/gif/spaceships.gif");
+    background-image: url("../img/negative/negative3.png");
 
 }
 
@@ -29,7 +29,7 @@ body{
 .sidetext {
     p {
         font-size: 5rem;
-        color: yellow;
+        color: deepskyblue;
         writing-mode: vertical-rl;
        
     }
