--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,6 +1,6 @@
 body{
-    background-image: url("../img/gif/spaceships.gif");
-
+    background-image: url("../img/gif/static.gif");
+    background-size: cover;
 }
 
 .title{
@@ -36,8 +36,11 @@ body{
 }
 
 .button {
-
-    position:relative;
+    position: absolute;
+    display: flex;
+    width: 100%;
+    margin-top: 20vh;
+    max-width: 100vh;
 
     p {
         color: orange;
@@ -47,13 +50,15 @@ body{
 
     button {
         display: block;
-        width: 1000px;
+        width: 100vh;
+        height: 50vh;
         margin: 0 auto;
         border: dashed;
         border-color: lime;
         background-color: white;
         transition-duration: 0.4s;
-        padding: 40px 100px;
+        background-image: url("../img/gif/email_us.gif");
+        background-size: cover;
     }
 
     button:hover {
