--- a/public/sass/title.scss
+++ b/public/sass/title.scss
@@ -17,7 +17,7 @@
     color: #fff;
     z-index: 2;
     background-image: url("../img/gif/redirect.gif");
-    background-size: cover;
+    background-size: contain;
 }
 
 .channels {
@@ -32,16 +32,21 @@
     color: #fff;
     z-index: 2;
     background-image: url("../img/gif/channels.gif");
-    background-size: cover;
+    background-size: contain;
     justify-content: right;
 }
 
 .phoneLink {
     display: flex;
     position: absolute;
-    justify-content: right;
     top: 10%;
-    width: 20%;
+    width: 60vh;
+    transition-duration: 0.4s;
+}
+
+.phoneLink:hover {
+    background-color: cornflowerblue;
+    background-blend-mode: color-burn;
 }
 
 .showcase {
@@ -49,35 +54,25 @@
     right: 0;
     width: 100%;
     min-height: 100vh;
-    padding: 50px;
+    
+    align-items: center;
+    background-image: url("../img/gif/birdsong-gif-crop.gif");
+    background-size: cover;
+    z-index: 2;
+}
+
+.textBox {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    min-height: 100vh;
+    padding-left: 50px;
+    padding-right: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #111;
-    color: #fff;
     z-index: 2;
-    background-image: url("../img/gif/birdsong-gif-crop.gif");
-    background-size: cover;
-}
-
-.showcase video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /*opacity: 0.8;*/
-}
-
-.showcase gif {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-    /*opacity: 0.8;*/
 }
 
 .menu {
@@ -90,16 +85,24 @@
     width: 100%;
     height: 100%;
     background: rgba(20, 20, 60, .6);
+    background-size: cover;
 }
 
 .text {
     position: relative;
     z-index: 10;
     display: inline-block;
-    
+    min-width: 100px;    
 }
 
-.text img {
-
+@media (max-width: 700px) {
+    body {
+        padding: 5px;
+    }
+    .textBox{
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
+@import 'email2';
