--- a/public/sass/title.scss
+++ b/public/sass/title.scss
@@ -99,9 +99,12 @@
     body {
         padding: 5px;
     }
-    .textBox{
+    .textBox {
         padding-left: 5px;
         padding-right: 5px;
+    }
+    .phoneLink {
+        width: 65%;
     }
 }
 
