--- a/public/sass/title.scss
+++ b/public/sass/title.scss
@@ -91,7 +91,15 @@
     position: relative;
     z-index: 10;
     display: inline-block;
-    min-width: 100px;    
+    min-width: 100px;
+
+    img {
+        opacity: 0.8;
+    }
+
+    img:hover {
+        opacity: 1;        
+    }
 }
 
 @media (max-width: 700px) {
