--- a/public/sass/title.scss
+++ b/public/sass/title.scss
@@ -16,7 +16,7 @@
     background: #111;
     color: #fff;
     z-index: 2;
-    background-image: url("../img/gif/redirect.gif");
+    background-image: url("../img/gif/redirect2.gif");
     background-size: contain;
 }
 
