--- a/public/sass/_iphone.scss
+++ b/public/sass/_iphone.scss
@@ -10,7 +10,7 @@
     display: flex;
     width: 100%;
     max-width: 700px;
-    padding: 10vh;
+    padding: 0vh;
     margin: 0px auto;
     margin-right: 100px;
     margin-top: 200px;
@@ -20,7 +20,7 @@
 
 .app{
     img { 
-        opacity: 0.7; 
+        opacity: 1; 
       } 
       
       img:hover { 
@@ -38,6 +38,16 @@
     width: 50%;
     margin: auto;
     transform: scale(1);
+    padding: 10vh;
+  }
+  .app {
+      img {
+          opacity: 0.7;
+      }
+
+      img:hover {
+          opacity: 1;
+      }
   }
 }
 
