--- a/public/sass/cover.scss
+++ b/public/sass/cover.scss
@@ -1,7 +1,7 @@
 ﻿body {
-    background-image: url("../img/DeadLands_Single_Digital.png");
-    background-size: 300vh;
-    background-position: bottom;
+    background-image: url("../img/gif/swoosh-gif.gif");
+    background-size: 220vh;
+    background-position: center;
 }
 
 #albumArt {
@@ -15,7 +15,7 @@
     width: 100%;
     max-width: 500px;
     padding: 0vh;
-    margin: 15vh auto;
+    margin: 5vh auto;
     margin-bottom: 5vh;
 }
 
@@ -63,9 +63,6 @@ p {
     max-width: 700px;
     padding: 0vh;
     margin: 5vh auto;
-
-    
-
 }
 
 
