--- a/public/sass/cover.scss
+++ b/public/sass/cover.scss
@@ -13,7 +13,16 @@
 .cover {
     position: absolute;
     width: 100%;
-    max-width: 500px;
+    max-width: 1000px;
+    padding: 0vh;
+    margin: 5vh auto;
+    margin-bottom: 5vh;
+}
+
+.cover2 {
+    position: absolute;
+    width: 100%;
+    max-width: 700px;
     padding: 0vh;
     margin: 5vh auto;
     margin-bottom: 5vh;
@@ -26,17 +35,29 @@ p {
     background-color: white;
 }
 
+.wrapperWrapper {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 0vh;
+}
+
+.fill {
+    margin: 0 10vh 0 10vh;
+}
+
 .linkWrapper {
     position: absolute;
     display: flex;
     justify-content: center;
     width: 100%;
-    max-width: 700px;
+    max-width: 300px;
     padding: 0vh;
     margin: 5vh auto;
 
     button {
-        font-size: larger;
+        font-size: large;
         font-family: 'VCR OSD Mono';
         height: stretch;
         cursor: pointer;
@@ -63,6 +84,12 @@ p {
     max-width: 700px;
     padding: 0vh;
     margin: 5vh auto;
+}
+
+@media (max-width: 700px) {
+    .wrapperWrapper {
+        display: initial;
+    }
 }
 
 
