--- a/public/sass/cover.scss
+++ b/public/sass/cover.scss
@@ -69,6 +69,13 @@ p {
     width: 50vh;
 }
 
+#linkButton {
+    width: 100vh;
+    background-image: url("../img/gif/rainbow.gif");
+    background-size: cover;
+    color: white;
+}
+
 #vizButton {
     width: 100vh;
     background-image: url("../img/gif/rainbow.gif");
