--- a/public/sass/email2.scss
+++ b/public/sass/email2.scss
@@ -9,8 +9,9 @@
     background: #111;
     color: #fff;
     z-index: 2;
-    background-image: url("../img/gif/static.gif");
-    background-size: cover;
+    background-image: url("../img/textures/2.jpg");
+    //background-size: cover;
+    background-size: 3vh;
 
     button {
         display: block;
