--- a/public/sass/_twitter.scss
+++ b/public/sass/_twitter.scss
@@ -12,6 +12,10 @@
   background-image: url('../img/iphone2cropped.png'); 
   background-size: cover;
   background-repeat: no-repeat;
+
+  img {
+      position: absolute;
+  }
 }
 
 .twitter-container {
