--- a/public/sass/cover.scss
+++ b/public/sass/cover.scss
@@ -10,6 +10,18 @@
     height: auto;
 }
 
+#title {
+    width: 100%;
+    max-width: 1000px;
+    height: auto;
+}
+
+#icon {
+    width: 100%;
+    max-width: 50px;
+    height: auto;
+}
+
 .cover {
     position: absolute;
     width: 100%;
@@ -25,7 +37,7 @@
     max-width: 700px;
     padding: 0vh;
     margin: 5vh auto;
-    margin-bottom: 5vh;
+    margin-bottom: 5vh;    
 }
 
 p {
