second of many.

--- a/public/sass/cover.scss
+++ b/public/sass/cover.scss
@@ -163,7 +163,7 @@ p { // general text
     width: 100%;
     max-width: 1000px;
     padding: 0vh;
-    margin: 5vh auto;
+    margin: auto;
 }
 
 .column { // holds different tour columns
