--- a/public/sass/cover.scss
+++ b/public/sass/cover.scss
@@ -2,7 +2,7 @@
 // GENERAL STUFF
 
 body {      // background
-    background-image: url("../img/gif/swoosh-gif.gif");
+    background-image: url("../img/mountain.png");
     background-size: 220vh;
     background-position: center;
 }
