--- a/public/sass/cover.scss
+++ b/public/sass/cover.scss
@@ -2,9 +2,9 @@
 // GENERAL STUFF
 
 body {      // background
-    background-image: url("../img/mountain.png");
     background-size: 220vh;
     background-position: center;
+    background-color: blue;
 }
 
 
