last one 4tnite

--- a/public/sass/cover.scss
+++ b/public/sass/cover.scss
@@ -5,6 +5,7 @@ body {      // background
     background-size: 220vh;
     background-position: center;
     background-color: blue;
+    background-image: url("../img/mountain.png");
 }
 
 
